--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "cors": "^2.8.5",
     "dotenv": "^17.2.0",
     "express": "^5.1.0",
+    "groq-sdk": "^0.27.0",
     "jsonwebtoken": "^9.0.2",
     "prisma": "^6.11.1"
   },
